--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,244 +1,1 @@
-<div class="container">
-  <div class="m-5 row">
-    <div class="row">
-      <img
-        style="width: 120px; height: 100px; border-radius: 50%"
-        src="https://p.kindpng.com/picc/s/587-5874678_heartbeat-vector-png-icon-blood-donation-png-transparent.png"
-        class="img-fluid"
-        alt="..."
-      />
-      <h2>
-        Blood <span style="color: rgba(255, 0, 0, 0.726)">Donation</span> App
-      </h2>
-    </div>
-    <button
-      type="button"
-      class="btn btn-outline-secondary btn-block"
-      data-bs-toggle="modal"
-      data-bs-target="#exampleModal"
-    >
-      Add User
-    </button>
-    <br /><br />
-    <br /><br />
-    <br /><br />
-    <div class="row g-1">
-      <div class="col-4">
-        <h3>List of Users :</h3>
-      </div>
-      <div class="col-8">
-        <div class="input-group flex-nowrap">
-          <input
-            type="text"
-            class="form-control"
-            [(ngModel)]="term"
-            placeholder="Search User"
-            aria-label="Username"
-            aria-describedby="addon-wrapping"
-          />
-        </div>
-      </div>
-    </div>
-
-    <br /><br />
-    <br /><br />
-
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
-          <th scope="col">Email</th>
-          <th scope="col">Phone</th>
-          <th scope="col">Blood Group</th>
-          <th scope="col">Location</th>
-          <th scope="col">Send Email</th>
-          <th scope="col">Send Message</th>
-        </tr>
-      </thead>
-
-      <tbody *ngFor="let user of usersArray | filter: term; index as i">
-        <tr>
-          <th scope="row">{{ i }}</th>
-          <td scope="row">{{ user.firstname }}</td>
-          <td scope="row">{{ user.lastname }}</td>
-          <td scope="row">{{ user.email }}</td>
-          <td scope="row">{{ user.num }}</td>
-          <td scope="row">{{ user.bg }}</td>
-          <td scope="row">{{ user.loc }}</td>
-          <td scope="row">
-            <button class="btn btn-outline-secondary">
-              <a
-                style="text-decoration: none; color: #222"
-                href="mailto:bilalzafarr39@gmail.com&subject=Mail from our Website&body=Some body text here"
-                >Send Email</a
-              >
-            </button>
-          </td>
-          <td scope="row">
-            <button class="btn btn-outline-info">
-              <a
-                style="text-decoration: none; color: #222"
-                href="tel:+923016159646"
-                >Message
-              </a>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <p
-      *ngIf="usersArray.length == 0"
-      style="color: grey; margin-left: 350px; margin-top: 50px"
-    >
-      No User Found
-    </p>
-  </div>
-</div>
-
-<!-- Button trigger modal -->
-
-<!-- Modal -->
-<div
-  class="modal fade"
-  id="exampleModal"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <strong>
-          <h5 class="modal-title display-6" id="exampleModalLabel">
-            ADD USER INFO
-          </h5></strong
-        >
-      </div>
-      <div class="modal-body">
-        <form
-          style="width: 300px"
-          #userForm="ngForm"
-          (ngSubmit)="userForm.form.valid && onSubmit(userForm)"
-        >
-          <div class="form-group">
-            <label>First Name</label>
-            <input
-              type="text"
-              name="firstname"
-              pattern="[a-zA-Z][a-zA-Z ]+[a-zA-Z]$"
-              #firstname="ngModel"
-              class="form-control"
-              ngModel
-              required
-            />
-            <span
-              *ngIf="firstname.invalid && firstname.touched"
-              style="color: red"
-              >Please Enter First Name
-            </span>
-          </div>
-          <br />
-          <div class="form-group">
-            <label>Last Name</label>
-            <input
-              type="text"
-              name="lastname"
-              pattern="[a-zA-Z][a-zA-Z ]+[a-zA-Z]$"
-              #lastname="ngModel"
-              class="form-control"
-              ngModel
-              required
-            />
-            <span
-              *ngIf="lastname.invalid && lastname.touched"
-              style="color: red"
-              >Please Enter Last Name
-            </span>
-          </div>
-          <br />
-          <div class="form-group">
-            <label>Email</label>
-            <input
-              type="text"
-              name="email"
-              email
-              #email="ngModel"
-              class="form-control"
-              ngModel
-              required
-            />
-            <span *ngIf="email.invalid && email.touched" style="color: red"
-              >Please Enter Valid Email
-            </span>
-          </div>
-          <br />
-          <div class="form-group">
-            <label>Number</label>
-            <input
-              type="number"
-              name="num"
-              pattern="^((\\+92-?)|0)?[0-9]{12}$"
-              minlength="11"
-              maxlength="11"
-              #num="ngModel"
-              class="form-control"
-              ngModel
-              required
-            />
-            <span *ngIf="num.invalid && num.touched" style="color: red"
-              >Please Enter Valid Number
-            </span>
-            <div *ngIf="num.errors?.pattern" style="color: red">
-              Mobile number is not 10 digit
-            </div>
-          </div>
-
-          <br />
-          <div class="form-group">
-            <label>Blood Group</label>
-            <input
-              type="text"
-              name="bg"
-              pattern="^(A|B|AB|O)[-+]$"
-              #bg="ngModel"
-              class="form-control"
-              ngModel
-              required
-            />
-            <span *ngIf="bg.invalid && bg.touched" style="color: red"
-              >Please Enter Valid Blood Group
-            </span>
-          </div>
-          <br />
-          <div class="form-group">
-            <label>Location</label>
-            <input
-              type="text"
-              name="loc"
-              pattern="[a-zA-Z][a-zA-Z ]+[a-zA-Z]$"
-              #loc="ngModel"
-              class="form-control"
-              ngModel
-              required
-            />
-            <span *ngIf="loc.invalid && loc.touched" style="color: red"
-              >Please Enter Valid Blood Group
-            </span>
-          </div>
-          <br />
-          <div class="form-group">
-            <button
-              [disabled]="userForm.invalid"
-              data-bs-dismiss="modal"
-              class="btn btn-danger btn-block"
-            >
-              Submit
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
