--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,12 @@
 <div class="container-fluid m-4">
-  <h3>Admin Login</h3>
+  <div class="flex">
+    <img
+      src="https://media.istockphoto.com/vectors/user-profile-icon-flat-red-round-button-vector-illustration-vector-id1162440985?k=20&m=1162440985&s=170667a&w=0&h=cQJ5HDdUKK_8nNDd_6RBoeDQfILERZnd_EirHTi7acI="
+      style="width: 140px; height: 130px; border-radius: 60%"
+    />
+    <h3>Admin Login</h3>
+  </div>
+
   <h3 style="color: rgba(255, 0, 0, 0.884)">Blood Donation App</h3>
   <form
     style="width: 300px; margin-left: 450px; margin-top: 150px"
@@ -22,6 +29,7 @@
         <p *ngIf="name.errors">Name is required</p>
       </div>
     </div>
+    <br />
 
     <div class="form-group">
       <label>Password </label>
@@ -45,7 +53,7 @@
 
     <div class="form-group">
       <button [disabled]="userForm.invalid" class="btn btn-danger btn-block">
-        Submit
+        Login
       </button>
     </div>
   </form>
